more fixes for nav bar on small screen

--- a/public/styles/collusion.css
+++ b/public/styles/collusion.css
@@ -1,7 +1,7 @@
 body{
 	font-family: "Open Sans";
 	color: #3D454D;
-	background-color: #3D454D;
+	background-color: #3D4851;
 }
 
 h1{
@@ -71,14 +71,23 @@ a:hover{
 
 
 .collusion-nav-bar{
+	width: 100%;
 	background: #1E2428;
 	height: 75px;
+	z-index: 1000;
+	position: fixed;
+	top: 0;
+}
+
+.collusion-nav-bar .collusion-nav-inner{
+	text-align: center;
 }
 
 .collusion-nav-bar ul{
 	list-style-type: none;
 	white-space: nowrap;
 }
+
 
 .collusion-nav-bar ul li a{
 	color: white;
@@ -88,6 +97,17 @@ a:hover{
 	font-size: 14px;
 	list-style-type: none;
 }
+
+@media screen and (max-width:780px){
+	.collusion-nav-bar{
+		height: 485px;
+		z-index: 1000;
+		position: relative;
+		top: 0;
+	}
+}
+
+
 
 .collusion-nav-bar ul li a:hover{
 	text-decoration: none;
@@ -114,7 +134,8 @@ a:hover{
 }
 
 .first-section{
-	padding: 200px 0 50px 0;	
+	margin-top: 75px;
+	padding: 100px 0 50px 0;	
 }
 
 .second-section,
